# wheel-timer-rs

./: .travis.yml  Cargo.toml  LICENSE.md  README.md  index.html  search-index.js
benches/: bench_wheel_timer.rs
implementors/core/iter/: trait.Iterator.js
src/: lib.rs  wheel_timer.rs
src/wheel_timer/: wheel_timer.rs.html
tests/: test_wheel_timer.rs
wheel_timer/: index.html  sidebar-items.js  struct.WheelTimer.html
